feat(state): introduce ProviderStateManager, refactor RiskManager & ProviderHealthCheckJob, and modernize record syntax